# sway-status-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
config_example/: config.toml
src/: config.rs  default_config.rs  main.rs  status_bar.rs
src/alsa/: alsa.c  bindings.rs  main.c  makefile
src/status_bar/: event.rs  mod.rs  status_bar.rs  status_block.rs  status_module.rs  status_module_factory.rs  status_update.rs
src/status_modules/: bat.rs  battery_module.rs  cpu_module.rs  date_and_time.rs  date_and_time_module.rs  mod.rs  sys_info_module.rs
src/status_modules/audio_module/: alsa.c  audio_module.rs  bindings.rs  mod.rs
