[package]
name = "sway_status_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "*"
serde = { version = "1.0.188" , features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1"
chrono = "*"
toml = "0.4.2"